@@ -22,7 +22,8 @@ package com.walmartlabs.concord.server.process;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.walmartlabs.concord.common.ConfigurationUtils;
-import com.walmartlabs.concord.common.IOUtils;
+import com.walmartlabs.concord.common.PathUtils;
+import com.walmartlabs.concord.common.ZipUtils;
 import com.walmartlabs.concord.imports.Imports;
 import com.walmartlabs.concord.policyengine.AttachmentsRule;
 import com.walmartlabs.concord.policyengine.CheckResult;
@@ -553,9 +554,9 @@ public class ProcessResource implements Resource {
 
         Optional<Path> o = stateManager.get(processKey, resource, src -> {
             try {
-                Path tmp = IOUtils.createTempFile("attachment", ".bin");
+                Path tmp = PathUtils.createTempFile("attachment", ".bin");
                 try (OutputStream dst = Files.newOutputStream(tmp)) {
-                    IOUtils.copy(src, dst);
+                    src.transferTo(dst);
                 }
                 return Optional.of(tmp);
             } catch (IOException e) {
@@ -571,7 +572,7 @@ public class ProcessResource implements Resource {
 
         return Response.ok((StreamingOutput) out -> {
             try (InputStream in = Files.newInputStream(tmp)) {
-                IOUtils.copy(in, out);
+                in.transferTo(out);
             } finally {
                 Files.delete(tmp);
             }
@@ -721,7 +722,7 @@ public class ProcessResource implements Resource {
         ProcessKey processKey = assertProcessKey(instanceId);
 
         try {
-            byte[] ab = IOUtils.toByteArray(data);
+            byte[] ab = data.readAllBytes();
             int upper = logManager.log(processKey, ab);
 
             // whenever we accept logs from an external source (e.g. from an Agent) we need to check
@@ -795,7 +796,7 @@ public class ProcessResource implements Resource {
                     .orElseThrow(() -> new ConcordApplicationException("State file not found: " + fileName, Status.NOT_FOUND));
 
             try (InputStream in = Files.newInputStream(tmp)) {
-                IOUtils.copy(in, output);
+                in.transferTo(output);
             } finally {
                 Files.delete(tmp);
             }
@@ -824,11 +825,11 @@ public class ProcessResource implements Resource {
         Path tmpIn = null;
         Path tmpDir = null;
         try {
-            tmpIn = IOUtils.createTempFile("attachments", ".zip");
+            tmpIn = PathUtils.createTempFile("attachments", ".zip");
             Files.copy(data, tmpIn, StandardCopyOption.REPLACE_EXISTING);
 
-            tmpDir = IOUtils.createTempDir("attachments");
-            IOUtils.unzip(tmpIn, tmpDir);
+            tmpDir = PathUtils.createTempDir("attachments");
+            ZipUtils.unzip(tmpIn, tmpDir);
 
             assertAttachmentsPolicy(tmpDir, entry);
 
@@ -852,7 +853,7 @@ public class ProcessResource implements Resource {
         } finally {
             if (tmpDir != null) {
                 try {
-                    IOUtils.deleteRecursively(tmpDir);
+                    PathUtils.deleteRecursively(tmpDir);
                 } catch (IOException e) {
                     log.warn("uploadAttachments -> cleanup error: {}", e.getMessage());
                 }
@@ -1033,9 +1034,9 @@ public class ProcessResource implements Resource {
 
     private static Optional<Path> copyToTmp(InputStream in) {
         try {
-            Path p = IOUtils.createTempFile("state", ".bin");
+            Path p = PathUtils.createTempFile("state", ".bin");
             try (OutputStream out = Files.newOutputStream(p)) {
-                IOUtils.copy(in, out);
+                in.transferTo(out);
             }
             return Optional.of(p);
         } catch (IOException e) {
